--- a/proyecto-final-frontend/src/app/inicio/inicio.page.html
+++ b/proyecto-final-frontend/src/app/inicio/inicio.page.html
@@ -1,16 +1,35 @@
-<ion-tabs>
+<ion-split-pane contentId="main">
+  <ion-menu side="start" menuId="first" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Menú principal</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-list-header>Cuentas</ion-list-header>
+        <ion-item routerLinkActive="active" routerLink="/inicio/cliente">
+          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+          <ion-label>Mis cuentas</ion-label>
+        </ion-item>
+        <ion-item routerLinkActive="active" routerLink="/inicio/cuenta">
+          <ion-icon name="add-circle-outline" slot="start"></ion-icon>
+          <ion-label>Crear cuenta</ion-label>
+        </ion-item>
+      </ion-list>
 
-  <ion-router-outlet id="main"></ion-router-outlet>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="cliente">
-      <ion-icon name="accessibility-outline"></ion-icon>
-      <ion-label>Cliente</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="ajustes">
-      <ion-icon name="settings"></ion-icon>
-      <ion-label>Ajustes</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-
-</ion-tabs>
+      <ion-list>
+        <ion-list-header>Personal</ion-list-header>
+        <ion-item routerLinkActive="active" routerLink="#">
+          <ion-icon name="settings-outline" slot="start"></ion-icon>
+          <ion-label>Ajustes</ion-label>
+        </ion-item>
+        <ion-item routerLinkActive="active" href="/login" (click)="logout()">
+          <ion-icon name="log-out-outline" slot="start"></ion-icon>
+          <ion-label>Cerrar sesión</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main" main></ion-router-outlet>
+</ion-split-pane>
