--- a/proyecto-final-frontend/src/app/inicio/client/modify/modify.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/modify/modify.page.html
@@ -1,55 +1,58 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>Registro</ion-title>    
+    <ion-title>Modificar usuario</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Registrar usuario</ion-card-title>
+      <ion-card-title>Register</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <form [formGroup]="formRegister">
+      <form [formGroup]="formModify">
         <ion-item>
           <ion-label position="floating">Tipo de identificación</ion-label>
-          <ion-input formControlName="idType"></ion-input>
+          <ion-input formControlName="idType" value="{{client.idType}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Número de identificación</ion-label>
-          <ion-input type="number" formControlName="idNumber"></ion-input>
+          <ion-input type="number" formControlName="idNumber" value="{{client.idNumber}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Apellidos</ion-label>
-          <ion-input formControlName="lastName"></ion-input>
+          <ion-input formControlName="lastName" value="{{client.lastName}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Nombre</ion-label>
-          <ion-input formControlName="firstName"></ion-input>
+          <ion-input formControlName="firstName" value="{{client.firstName}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Correo electrónico</ion-label>
-          <ion-input type="email" formControlName="email"></ion-input>
+          <ion-input type="email" formControlName="email" value="{{client.email}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Fecha de nacimiento</ion-label>
-          <ion-input type="date" formControlName="bornDate"></ion-input>
+          <ion-input type="date" formControlName="bornDate" value="{{client.bornDate}}"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Password</ion-label>
-          <ion-input type="password" formControlName="password"></ion-input>
+          <ion-label position="floating">New Password</ion-label>
+          <ion-input type="password" formControlName="password" autocomplete="off"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Confirm Password</ion-label>
           <ion-input type="password" formControlName="confirmPassword" autocomplete="off"></ion-input>
         </ion-item>
+        
+        <ion-item>
+          <ion-label position="floating">Old Password</ion-label>
+          <ion-input type="password" formControlName="oldPassword" autocomplete="off"></ion-input>
+        </ion-item>
       </form>
       <br>
-      <ion-button (click)="register()">
-        Registrar
+      <ion-button (click)="modify()">
+        Modificar
       </ion-button>
     </ion-card-content>
   </ion-card>
