--- a/proyecto-final-frontend/src/app/inicio/inicio.page.html
+++ b/proyecto-final-frontend/src/app/inicio/inicio.page.html
@@ -20,9 +20,9 @@
 
       <ion-list>
         <ion-list-header>Personal</ion-list-header>
-        <ion-item routerLinkActive="active" routerLink="#">
+        <ion-item routerLinkActive="active" routerLink="/inicio/cliente/modificar">
           <ion-icon name="settings-outline" slot="start"></ion-icon>
-          <ion-label>Ajustes</ion-label>
+          <ion-label>Ajustes de usuario</ion-label>
         </ion-item>
         <ion-item routerLinkActive="active" href="/login" (click)="logout()">
           <ion-icon name="log-out-outline" slot="start"></ion-icon>
