--- a/proyecto-final-frontend/src/app/inicio/client/modify/modify.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/modify/modify.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Modificar usuario</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -56,4 +59,7 @@
       </ion-button>
     </ion-card-content>
   </ion-card>
-</ion-content>
+</ion-content>  
+<ion-button (click)="delete()" color="danger">
+  Eliminar
+</ion-button>
