FEATURE - Operation list
- Operation list by account
- Fixed login with encrypted password

--- a/proyecto-final-frontend/src/app/inicio/client/client.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/client.page.html
@@ -11,7 +11,7 @@
   <br>
   <ion-title>Tus cuentas:</ion-title>
   <ion-infinite-scroll>
-      <ion-card *ngFor="let account of accounts" href="#" class="ion-activated">
+      <ion-card *ngFor="let account of accounts" routerLink="./movimientos" (click)="saveAccount(account)" class="ion-activated">
         <ion-card-header>
           <ion-card-subtitle> {{account.number}}</ion-card-subtitle>
           <ion-card-title>Cuenta {{account.type}}</ion-card-title>
