--- a/proyecto-final-frontend/src/app/inicio/client/operations/operations.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/operations/operations.page.html
@@ -10,31 +10,28 @@
 
 <ion-content>
   <ion-infinite-scroll>
-      <ion-card *ngFor="let operation of operations" class="ion-activated">
-        <ion-card-header>
-          <!--<ion-card-subtitle> {{operation.number}}</ion-card-subtitle>
+    <div class="card-data">
+      <div class="card">
+        <ion-card *ngFor="let operation of operations" class="ion-activated">
+          <ion-card-header>
+            <!--<ion-card-subtitle> {{operation.number}}</ion-card-subtitle>
           <ion-card-title>Cuenta {{account.type}}</ion-card-title>-->
-        </ion-card-header>
-        <ion-card-content>
-          <ion-item>
-            <ion-label>{{operation.id}}</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>{{operation.idaccount}}</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>{{operation.operationType}}</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>{{operation.description}}</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>{{operation.amount}}</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>{{operation.credit}}</ion-label>
-          </ion-item>
-        </ion-card-content>
-      </ion-card>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-item>
+              <ion-label>{{operation.operationType}}</ion-label>
+              <ion-label slot="end">{{operation.credit}}</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label>{{operation.date}}</ion-label>
+              <ion-label slot="end">{{operation.amount}}</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label>{{operation.description}}</ion-label>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+      </div>
+    </div>
   </ion-infinite-scroll>
 </ion-content>
