--- a/proyecto-final-frontend/src/app/inicio/client/operations/operations.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/operations/operations.page.html
@@ -1,8 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
       <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button routerLink="./nuevo">
+        Crear movimiento
+      </ion-button>
     </ion-buttons>
     <ion-title>Movimientos</ion-title>
   </ion-toolbar>
@@ -14,17 +18,13 @@
       <div class="card">
         <ion-card *ngFor="let operation of operations" class="ion-activated">
           <ion-card-header>
-            <!--<ion-card-subtitle> {{operation.number}}</ion-card-subtitle>
-          <ion-card-title>Cuenta {{account.type}}</ion-card-title>-->
+            <ion-card-subtitle>{{operation.credit}}</ion-card-subtitle>
+            <ion-card-title>{{operation.operationType}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-item>
-              <ion-label>{{operation.operationType}}</ion-label>
-              <ion-label slot="end">{{operation.credit}}</ion-label>
-            </ion-item>
-            <ion-item>
               <ion-label>{{operation.date}}</ion-label>
-              <ion-label slot="end">{{operation.amount}}</ion-label>
+              <ion-label slot="end">${{operation.amount}}</ion-label>
             </ion-item>
             <ion-item>
               <ion-label>{{operation.description}}</ion-label>
