--- a/proyecto-final-frontend/src/app/inicio/client/operations/operations.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/operations/operations.page.html
@@ -34,4 +34,8 @@
       </div>
     </div>
   </ion-infinite-scroll>
+  
+  <div *ngIf="operations?.length == 0">
+    <h1 class="ion-text-center">No existen movimientos</h1>
+  </div>
 </ion-content>
