--- a/proyecto-final-frontend/src/app/inicio/client/operations/new/new.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/operations/new/new.page.html
@@ -24,7 +24,7 @@
         </ion-item>
         <ion-item>
           <ion-label position="floating">Monto</ion-label>
-          <ion-input formControlName="amount"></ion-input>
+          <ion-input type="number" formControlName="amount"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>Tipo de movimiento</ion-label>
@@ -35,7 +35,7 @@
         </ion-item>
         <ion-item *ngIf="formOperation.value.operationType==2">
           <ion-label position="floating">Cuenta destino</ion-label>
-          <ion-input formControlName="idDestination"></ion-input>
+          <ion-input type="number" formControlName="idDestination"></ion-input>
         </ion-item>
       </form>
       <br>
