--- a/proyecto-final-frontend/src/app/inicio/client/client.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/client.page.html
@@ -7,26 +7,28 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <br>
   <ion-title>Tus cuentas:</ion-title>
   <ion-infinite-scroll>
-      <ion-card *ngFor="let account of accounts" (click)="saveAccount(account)" class="ion-activated" class="pointer">
-        <ion-card-header>
+      <ion-card *ngFor="let account of accounts" (click)="saveAccount(account)">
+        <ion-item>
           <ion-card-subtitle> {{account.id}}</ion-card-subtitle>
+          <ion-button fill="clear" slot="end" (click)="options($event, account)" size="big">
+            <ion-icon slot="icon-only" name="settings"></ion-icon>
+          </ion-button>
+        </ion-item>
+        <ion-item>
           <ion-card-title>Cuenta {{typeToString(account.type)}}</ion-card-title>
-        </ion-card-header>
+        </ion-item>
         <ion-card-content>
           <ion-item>
-            <ion-label>Saldo disponible: ${{account.amount}}</ion-label>
-            <ion-button fill="clear" slot="end" (click)="options($event, account)" size="big">
-              <ion-icon slot="icon-only" name="settings"></ion-icon>
-            </ion-button>
+            <ion-label><b>Saldo disponible: ${{account.amount}}</b></ion-label>
           </ion-item>
         </ion-card-content>
       </ion-card>
       <div *ngIf="accounts?.length == 0">
         <h1 class="ion-text-center">No existen cuentas</h1>
-      </div>
+      </div>      
   </ion-infinite-scroll>
 </ion-content>
