--- a/proyecto-final-frontend/src/app/inicio/client/operations/operations.page.html
+++ b/proyecto-final-frontend/src/app/inicio/client/operations/operations.page.html
@@ -5,14 +5,14 @@
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button routerLink="./nuevo">
-        Crear movimiento
+        Nuevo <ion-icon size="large" name="add-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>Movimientos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-infinite-scroll>
     <div class="card-data">
       <div class="card">
@@ -23,8 +23,8 @@
           <ion-card-content>
             <ion-item>
               <ion-label>{{operation.date}}</ion-label>
-              <ion-label *ngIf="operation.credit==0" color="danger" slot="end">-${{operation.amount}}</ion-label>
-              <ion-label *ngIf="operation.credit==1" color="success" slot="end">${{operation.amount}}</ion-label>
+              <ion-label *ngIf="operation.credit==0" color="danger" slot="end"><b>-${{operation.amount}}</b></ion-label>
+              <ion-label *ngIf="operation.credit==1" color="success" slot="end"><b>${{operation.amount}}</b></ion-label>
             </ion-item>
             <ion-item>
               <ion-label>{{operation.description}}</ion-label>
