--- a/proyecto-final-frontend/src/app/inicio/inicio.page.html
+++ b/proyecto-final-frontend/src/app/inicio/inicio.page.html
@@ -6,29 +6,30 @@
       </ion-toolbar>
     </ion-header>
     <ion-content>
-      <ion-list>
-        <ion-list-header>Cuentas</ion-list-header>
-        <ion-item routerLinkActive="active" routerLink="/inicio/cliente">
-          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-          <ion-label>Mis cuentas</ion-label>
-        </ion-item>
-        <ion-item routerLinkActive="active" routerLink="/inicio/cuenta">
-          <ion-icon name="add-circle-outline" slot="start"></ion-icon>
-          <ion-label>Crear cuenta</ion-label>
-        </ion-item>
-      </ion-list>
-
-      <ion-list>
-        <ion-list-header>Personal</ion-list-header>
-        <ion-item routerLinkActive="active" routerLink="/inicio/cliente/modificar">
-          <ion-icon name="settings-outline" slot="start"></ion-icon>
-          <ion-label>Ajustes de usuario</ion-label>
-        </ion-item>
-        <ion-item routerLinkActive="active" href="/login" (click)="logout()">
-          <ion-icon name="log-out-outline" slot="start"></ion-icon>
-          <ion-label>Cerrar sesión</ion-label>
-        </ion-item>
-      </ion-list>
+      <ion-menu-toggle auto-hide="false">
+        <ion-list>
+          <ion-list-header>Cuentas</ion-list-header>
+          <ion-item routerLinkActive="active" routerLink="/inicio/cliente">
+            <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+            <ion-label>Mis cuentas</ion-label>
+          </ion-item>
+          <ion-item routerLinkActive="active" routerLink="/inicio/cuenta">
+            <ion-icon name="add-circle-outline" slot="start"></ion-icon>
+            <ion-label>Crear cuenta</ion-label>
+          </ion-item>
+        </ion-list>
+        <ion-list>
+          <ion-list-header>Personal</ion-list-header>
+          <ion-item routerLinkActive="active" routerLink="/inicio/cliente/modificar">
+            <ion-icon name="settings-outline" slot="start"></ion-icon>
+            <ion-label>Ajustes de usuario</ion-label>
+          </ion-item>
+          <ion-item routerLinkActive="active" href="/login" (click)="logout()">
+            <ion-icon name="log-out-outline" slot="start"></ion-icon>
+            <ion-label>Cerrar sesión</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-menu-toggle>
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="main" main></ion-router-outlet>
