CHANGE - Client to user
- Changed client to user
- Added 'admin' attribute for future validation

--- a/proyecto-final-frontend/src/app/inicio/user/modify/modify.page.html
+++ b/proyecto-final-frontend/src/app/inicio/user/modify/modify.page.html
@@ -14,27 +14,27 @@
       <form [formGroup]="formModify">
         <ion-item>
           <ion-label position="floating">Tipo de identificación</ion-label>
-          <ion-input formControlName="idType" value="{{client.idType}}"></ion-input>
+          <ion-input formControlName="idType" value="{{user.idType}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Número de identificación</ion-label>
-          <ion-input type="number" formControlName="idNumber" value="{{client.idNumber}}"></ion-input>
+          <ion-input type="number" formControlName="idNumber" value="{{user.idNumber}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Apellidos</ion-label>
-          <ion-input formControlName="lastName" value="{{client.lastName}}"></ion-input>
+          <ion-input formControlName="lastName" value="{{user.lastName}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Nombre</ion-label>
-          <ion-input formControlName="firstName" value="{{client.firstName}}"></ion-input>
+          <ion-input formControlName="firstName" value="{{user.firstName}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Correo electrónico</ion-label>
-          <ion-input type="email" formControlName="email" value="{{client.email}}"></ion-input>
+          <ion-input type="email" formControlName="email" value="{{user.email}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Fecha de nacimiento</ion-label>
-          <ion-input type="date" formControlName="bornDate" value="{{client.bornDate}}"></ion-input>
+          <ion-input type="date" formControlName="bornDate" value="{{user.bornDate}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Contraseña nueva</ion-label>
