--- a/proyecto-final-frontend/src/app/inicio/inicio.page.html
+++ b/proyecto-final-frontend/src/app/inicio/inicio.page.html
@@ -9,7 +9,7 @@
       <ion-menu-toggle auto-hide="false">
         <ion-list>
           <ion-list-header>Cuentas</ion-list-header>
-          <ion-item routerLinkActive="active" routerLink="/inicio/cliente">
+          <ion-item routerLinkActive="active" routerLink="/inicio/usuario">
             <ion-icon name="person-circle-outline" slot="start"></ion-icon>
             <ion-label>Mis cuentas</ion-label>
           </ion-item>
@@ -20,7 +20,7 @@
         </ion-list>
         <ion-list>
           <ion-list-header>Personal</ion-list-header>
-          <ion-item routerLinkActive="active" routerLink="/inicio/cliente/modificar">
+          <ion-item routerLinkActive="active" routerLink="/inicio/usuario/modificar">
             <ion-icon name="settings-outline" slot="start"></ion-icon>
             <ion-label>Ajustes de usuario</ion-label>
           </ion-item>
