--- a/proyecto-final-frontend/src/app/inicio/user/user.page.html
+++ b/proyecto-final-frontend/src/app/inicio/user/user.page.html
@@ -1,34 +1,53 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Bienvenido</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-buttons slot="end">
+        <ion-button routerLink="./nuevo">
+          Nuevo <ion-icon size="large" name="add-circle-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-title>Usuarios</ion-title>
+    </ion-toolbar>
+  </ion-header>
+<!-- 
+"id": 1,
+"idType": "CC",
+"idNumber": "1090514820",
+"lastName": "Bobrek",
+"firstName": "Jorge",
+"bornDate": "1998-03-18",
+"email": "jrbobrek@gmail.com",
+"password": "$2a$10$LRzl4OGEb4Xaaot9sMSsluviriLxV7f0VwDPGGD1oamJgbCRj30Re",
+"created": "2021-12-30",
+"active": true,
+"admin": true
+ -->
 <ion-content class="ion-padding">
-  <br>
-  <ion-title>Tus cuentas:</ion-title>
-  <ion-infinite-scroll>
-      <ion-card *ngFor="let account of accounts" (click)="saveAccount(account)">
-        <ion-item>
-          <ion-card-subtitle> {{account.id}}</ion-card-subtitle>
-          <ion-button fill="clear" slot="end" (click)="options($event, account)" size="big">
-            <ion-icon slot="icon-only" name="settings"></ion-icon>
-          </ion-button>
-        </ion-item>
-        <ion-item>
-          <ion-card-title>Cuenta {{typeToString(account.type)}}</ion-card-title>
-        </ion-item>
-        <ion-card-content>
+    <ion-infinite-scroll>
+        <ion-card *ngFor="let user of users" (click)="saveUser(user)">
           <ion-item>
-            <ion-label><b>Saldo disponible: ${{account.amount}}</b></ion-label>
+            <ion-card-subtitle> {{user.id}}</ion-card-subtitle>
+            <ion-button fill="clear" slot="end" (click)="options($event, user)" size="big">
+              <ion-icon slot="icon-only" name="settings"></ion-icon>
+            </ion-button>
           </ion-item>
-        </ion-card-content>
-      </ion-card>
-      <div *ngIf="accounts?.length == 0">
-        <h1 class="ion-text-center">No existen cuentas</h1>
-      </div>      
-  </ion-infinite-scroll>
-</ion-content>
+          <ion-item>
+            <ion-card-title>{{user.firstName}} {{user.lastName}}</ion-card-title>
+          </ion-item>
+          <ion-card-content>
+            <ion-item>
+              <ion-label>{{user.idType}}: {{user.idNumber}}</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label>{{user.email}}</ion-label>
+              <ion-label>{{user.bornDate}}</ion-label>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+        <div *ngIf="users?.length == 0">
+          <h1 class="ion-text-center">No existen clientes</h1>
+        </div>      
+    </ion-infinite-scroll>
+  </ion-content>
