--- a/proyecto-final-frontend/src/app/inicio/inicio.page.html
+++ b/proyecto-final-frontend/src/app/inicio/inicio.page.html
@@ -8,22 +8,14 @@
     <ion-content>
       <ion-menu-toggle auto-hide="false">
         <ion-list>
-          <ion-list-header>Cuentas</ion-list-header>
-          <ion-item routerLinkActive="active" routerLink="/inicio/usuario">
+          <ion-list-header>Inicio</ion-list-header>
+          <ion-item routerLinkActive="active" routerLink="/inicio/usuarios">
             <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-            <ion-label>Mis cuentas</ion-label>
-          </ion-item>
-          <ion-item routerLinkActive="active" routerLink="/inicio/cuenta">
-            <ion-icon name="add-circle-outline" slot="start"></ion-icon>
-            <ion-label>Crear cuenta</ion-label>
+            <ion-label>Usuarios</ion-label>
           </ion-item>
         </ion-list>
         <ion-list>
           <ion-list-header>Personal</ion-list-header>
-          <ion-item routerLinkActive="active" routerLink="/inicio/usuario/modificar">
-            <ion-icon name="settings-outline" slot="start"></ion-icon>
-            <ion-label>Ajustes de usuario</ion-label>
-          </ion-item>
           <ion-item routerLinkActive="active" href="/login" (click)="logout()">
             <ion-icon name="log-out-outline" slot="start"></ion-icon>
             <ion-label>Cerrar sesión</ion-label>
