--- a/proyecto-final-frontend/src/app/inicio/user/account/operations/operations.page.html
+++ b/proyecto-final-frontend/src/app/inicio/user/account/operations/operations.page.html
@@ -2,6 +2,9 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
+      <ion-button routerLink="../">
+        <ion-icon size="large" slot="icon-only" name="arrow-back-outline"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button routerLink="./nuevo">
