--- a/proyecto-final-frontend/src/app/login/login.page.html
+++ b/proyecto-final-frontend/src/app/login/login.page.html
@@ -3,6 +3,55 @@
     <ion-title>Iniciar Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
+<!-- <div class="container">
+  <div class="forms-container">
+    <div class="signin-signup">
+      <form action="" class="sign-in-form">
+        <h2 class="title">Sing in</h2>
+        <div class="input-field">
+          <i class="fas fa-envelope"></i>
+          <input type="text" placeholder="Username">
+        </div>
+        <div class="input-field">
+          <i class="fas fa-lock"></i>
+          <input type="password" placeholder="Password">
+        </div>
+        <input type="submit" value="Login" class="btn solid">
+      </form>
+
+      <form action="" class="sign-up-form">
+        <h2 class="title">Sing up</h2>
+        <div class="input-field">
+          <i class="fas fa-envelope"></i>
+          <input type="text" placeholder="Username">
+        </div>
+        <div class="input-field">
+          <i class="fas fa-lock"></i>
+          <input type="password" placeholder="Password">
+        </div>
+        <input type="submit" value="Sign up" class="btn solid">
+      </form>
+    </div>
+  </div>
+  <div class="panels-container">
+    <div class="panel left-panel">
+      <div class="content">
+        <h3> ¿No tienes cuenta? </h3>
+        <button class="btn transparent" id="sign-up-btn">Registro</button>
+      </div>
+      <img src="assets/register.svg" class="image" alt="">
+    </div>
+    
+    <div class="panel right-panel">
+      <div class="content">
+        <h3> ¿Ya tienes cuenta? </h3>
+        <button class="btn transparent" id="sign-up-btn">Registro</button>
+      </div>
+      <img src="assets/register.svg" class="image" alt="">
+    </div>
+  </div>
+</div>
+ -->
 
 <ion-content class="ion-padding">
   <div class="flex-center">
