--- a/proyecto-final-frontend/src/app/inicio/user/account/account.page.html
+++ b/proyecto-final-frontend/src/app/inicio/user/account/account.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-button routerLink="../">
+      <ion-button routerLink="/inicio/usuarios">
         <ion-icon size="large" slot="icon-only" name="arrow-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
