--- a/proyecto-final-frontend/src/theme/variables.scss
+++ b/proyecto-final-frontend/src/theme/variables.scss
@@ -1,8 +1,11 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: 'Poppins', sans-serif;
+  
   /** primary **/
   --ion-color-primary: #2dd36f;
   --ion-color-primary-rgb: 45, 211, 111;
